--- a/jupyter/revisao_programacao.ipynb
+++ b/jupyter/revisao_programacao.ipynb
@@ -24,9 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pedro Henrique Mendes da Silva\n",
+      "17\n",
+      "1.75\n",
+      "true\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Crie variáveis para armazenar:\n",
     "#    - Seu nome (string)\n",
@@ -35,7 +46,24 @@
     "#    - Se você gosta de programar (boolean)\n",
     "# Depois, imprima cada uma dessas variáveis\n",
     "\n",
-    "# Seu código aqui"
+    "# Seu código aqui\n",
+    "nome = (\"Pedro Henrique Mendes da Silva\")\n",
+    "idade = 17\n",
+    "altura = 1.75\n",
+    "\n",
+    "\n",
+    "print(nome)\n",
+    "print(idade)\n",
+    "print(altura)\n",
+    "\n",
+    "def variavel():\n",
+    "    x = (\"sim\")\n",
+    "    if x==\"sim\":\n",
+    "        print(\"true\")\n",
+    "    \n",
+    "    else:\n",
+    "        print(\"false\")\n",
+    "variavel()"
    ]
   },
   {
@@ -47,9 +75,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['maça', 'laranja', 'banana', 'melao', 'morango']\n",
+      "['maça', 'laranja', 'banana', 'melao', 'morango', 'maracuja']\n",
+      "['maça', 'banana', 'melao', 'morango', 'maracuja']\n",
+      "melao\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Crie uma lista chamada 'frutas' com 5 frutas diferentes\n",
     "#    - Adicione uma nova fruta no final da lista\n",
@@ -57,7 +96,14 @@
     "#    - Imprima a lista resultante\n",
     "#    - Imprima apenas a terceira fruta da lista\n",
     "\n",
-    "# Seu código aqui"
+    "# Seu código aqui\n",
+    "lista = ['maça', 'laranja', 'banana', 'melao', 'morango']\n",
+    "print(lista)\n",
+    "lista.insert(5, 'maracuja')\n",
+    "print(lista)\n",
+    "lista.pop(1)\n",
+    "print(lista)\n",
+    "print(lista[2])\n"
    ]
   },
   {
@@ -69,16 +115,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zero\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Crie um programa que verifica se um número é positivo, negativo ou zero\n",
     "#    - Peça para o usuário digitar um número\n",
     "#    - Use if, elif e else para verificar o número\n",
     "#    - Imprima o resultado\n",
     "\n",
-    "# Seu código aqui"
+    "# Seu código aqui\n",
+    "def programa():\n",
+    "    numero = int(input(\"digite um numero: \"))\n",
+    "    if 0<numero:\n",
+    "        print(\"positivo\")\n",
+    "    \n",
+    "    elif 0==numero:\n",
+    "        print(\"zero\")\n",
+    "    else:\n",
+    "        print(\"negativo\")\n",
+    "programa()\n",
+    "\n"
    ]
   },
   {
@@ -90,15 +155,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "Fogo!\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Crie um contador regressivo de 5 até 1 usando while\n",
     "#    - A cada iteração, imprima o número atual\n",
     "#    - Quando chegar a 1, imprima \"Fogo!\"\n",
     "\n",
-    "# Seu código aqui"
+    "# Seu código aqui\n",
+    "x = 5\n",
+    "while 1<=x<=5:\n",
+    "    print(x)\n",
+    "    x = x-1\n",
+    "print('Fogo!')"
    ]
   },
   {
@@ -131,16 +214,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "# 6. Crie uma lista de números de 1 a 10\n",
     "#    - Use um loop for para imprimir apenas os números pares\n",
     "#    - Depois, crie uma nova lista com os números ímpares\n",
     "#    - Imprima a lista de ímpares\n",
     "\n",
-    "# Seu código aqui"
+    "# Seu código aqui\n",
+    "lista = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "print(lista)"
    ]
   },
   {
@@ -154,7 +247,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "é maior\n"
+     ]
+    }
+   ],
    "source": [
     "# 7. Crie um jogo de adivinhação onde:\n",
     "#    - O computador escolhe um número aleatório entre 1 e 10\n",
@@ -163,7 +265,24 @@
     "#    - Se acertar, imprima \"Parabéns!\" e encerre o jogo\n",
     "#    - Se errar todas as tentativas, imprima o número correto\n",
     "\n",
-    "# Seu código aqui"
+    "# Seu código aqui\n",
+    "import random\n",
+    "\n",
+    "numero_aleatorio = random.randint(0,10)\n",
+    "numero = int(input(\"Adivinhe o numero: \"))\n",
+    "print(numero_aleatorio)\n",
+    "while numero==numero_aleatorio:\n",
+    "    print('Parabéns!')\n",
+    "    break\n",
+    "if numero>numero_aleatorio:\n",
+    "    print('é maior')\n",
+    "elif numero<numero_aleatorio:\n",
+    "    print('é menor')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
