--- a/jupyter/revisao_programacao.ipynb
+++ b/jupyter/revisao_programacao.ipynb
@@ -294,9 +294,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pedro, 17 anos\n",
+      "Magreza grau II\n",
+      "[75.0, 1.76, 'pedro, 17 anos', 24.212293388429753]\n"
+     ]
+    }
+   ],
    "source": [
     "# 8. Crie um programa que:\n",
     "#    - Pede para o usuário digitar o seu próprio peso em Kgs.\n",
@@ -315,7 +325,33 @@
     "#    - >= 40        Obesidade muito severa (grau III)\n",
     "#    - Finalmente, em ordem alfabética, exiba todos os itens da lista ao lado de seus dados, seu IMC e sua respectiva classificação.\n",
     "\n",
-    "# Seu código aqui"
+    "# Seu código aqui\n",
+    "\n",
+    "peso = float(input(\"Qual seu peso?\"))\n",
+    "altura = float(input(\"Qual sua altura?\"))\n",
+    "apresentação = (input(\"Digite seu nome e idade: \"))\n",
+    "resultado = peso/(altura*altura)\n",
+    "print(apresentação)\n",
+    "\n",
+    "if resultado<16:\n",
+    "    print(\"Magreza grau III\")\n",
+    "elif resultado>=16.9:\n",
+    "    print(\"Magreza grau II\")\n",
+    "elif resultado>=18.4:\n",
+    "    print(\"Magreza grau I\")\n",
+    "elif resultado>=24.9:\n",
+    "    print(\"Eutrofia\")\n",
+    "elif resultado>=29.9:\n",
+    "    print(\"Pré-obesidade\")\n",
+    "elif resultado>=34.4:\n",
+    "    print(\"Obesidade moderada (grau I)\")\n",
+    "elif resultado>=39.9:\n",
+    "    print(\"Obesidade muito severa (grau II)\")\n",
+    "elif resultado>=40:\n",
+    "    print(\"Obesidade muito severa (grau III)\")\n",
+    "\n",
+    "lista = [peso, altura, apresentação, resultado]\n",
+    "print(lista)"
    ]
   },
   {
