--- a/jupyter/revisao_programacao.ipynb
+++ b/jupyter/revisao_programacao.ipynb
@@ -24,16 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pedro Henrique Mendes da Silva\n",
-      "17\n",
-      "1.75\n",
+      "Pedro Henrique Mendes da Silva tem 17 anos e 1.75 de altura.\n",
       "true\n"
      ]
     }
@@ -52,9 +50,7 @@
     "altura = 1.75\n",
     "\n",
     "\n",
-    "print(nome)\n",
-    "print(idade)\n",
-    "print(altura)\n",
+    "print(\"%s tem %d anos e %1.2f de altura.\" % (nome, idade, altura))\n",
     "\n",
     "def variavel():\n",
     "    x = (\"sim\")\n",
@@ -195,14 +191,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 6, 3, 2, 8] 4.8\n"
+     ]
+    }
+   ],
    "source": [
     "# 5. Crie um programa que calcula a média de 5 notas usando for\n",
     "#    - Peça para o usuário digitar 5 notas\n",
     "#    - Use um loop for para somar as notas\n",
     "#    - Calcule e imprima a média\n",
     "\n",
-    "# Seu código aqui"
+    "# Seu código aqui\n",
+    "nota1= int(input('primeira nota: '))\n",
+    "nota2= int(input('segunda nota: '))\n",
+    "nota3= int(input('terceira nota: '))\n",
+    "nota4= int(input('quarta nota: '))\n",
+    "nota5= int(input('quinta nota: '))\n",
+    "\n",
+    "notas=[nota1, nota2, nota3, nota4, nota5]\n",
+    "soma = 0\n",
+    "for n in notas:\n",
+    "    soma += n\n",
+    "print(notas, soma/len(notas))"
    ]
   },
   {
@@ -214,14 +229,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
      ]
     }
    ],
@@ -233,7 +257,10 @@
     "\n",
     "# Seu código aqui\n",
     "lista = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "print(lista)"
+    "L=1\n",
+    "for L in lista:\n",
+    "    print(L*2)\n",
+    "    \n"
    ]
   },
   {
